--- a/hzhaoc-f(x)/Physics/Mechanics/力矩，角动量.md
+++ b/hzhaoc-f(x)/Physics/Mechanics/力矩，角动量.md
@@ -19,3 +19,10 @@ $$P = m * v$$
 - 在量子力学里角动量是量子化的：系统的角动量不能任意地取某实数值而只能取以约化普朗克常数为单位整数或半整数倍。粒子的运动轨道造成的角动量必须取约化普朗克常数的整数倍。
 - **另外实验证明大部分亚原子粒子都拥有一种和运动无关的先天角动量叫自旋。自旋与约化普朗克常数一半的倍数出现**。
 - 经典力学内角动量是可以取任意连续值会导致热力学上一些吊诡。角动量量子化给这些问题完美的答案，这也是角动量量子化有其必要性的证据之一。
+
+##### 自旋
+在量子力学中，自旋（英語：Spin）是粒子所具有的**内稟性質**（英语：Intrinsic and extrinsic properties），其運算規則類似於經典力學的角動量，並因此產生一個磁場。雖然有時會與经典力學中的自轉（例如行星公轉時同時進行的自轉）相類比，但實際上本質是迥異的。經典概念中的自轉，是物體對於其質心的旋轉，比如地球每日的自轉是順著一個通過地心的極軸所作的轉動。
+
+首先對基本粒子提出自轉與相應角動量概念的是1925年由拉尔夫·克勒尼希、喬治·烏倫貝克與塞缪尔·古德斯米特三人所開創。他們在處理電子的磁場理論時，把電子想象为一個帶電的球體，自轉因而產生磁場。後來在量子力學中，透過理論以及實驗驗證發現基本粒子可視為是不可分割的點粒子，所以物體自轉無法直接套用到自旋角動量上來，因此僅能將自旋視為一種内禀性質，為粒子與生俱來帶有的一種角動量，並且其量值是量子化的，無法被改變（但自旋角動量的指向可以通過操作來改變）。
+
+自旋對原子尺度的系統格外重要，諸如單一原子、質子、電子甚至是光子，都帶有正半奇數（1/2、3/2等等）或含零正整數（0、1、2）的自旋；半整數自旋的粒子被稱為費米子（如電子），整數的則稱為玻色子（如光子）。複合粒子也帶有自旋，其由組成粒子（可能是基本粒子）之自旋透過加法所得；例如質子的自旋可以從夸克自旋得到。
