--- a/hzhaoc-f(x)/Physics/Quantum Mechanics/结合能.md
+++ b/hzhaoc-f(x)/Physics/Quantum Mechanics/结合能.md
@@ -3,9 +3,12 @@
 在更广泛的层面上，结合能是指将一个整体分为若干个部分所需要的能量（或者相反过程放出的能量）。一个处于基态的整体相比于组成它的分散的个体拥有更低的能量，这是这个系统能够处于稳定状态的原因。
 
 - 在原子尺度上，原子的原子结合能源于原子内部的**电磁作用**，**是使原子分解为电子和原子核所需的能量**。电子结合能是原子释放电子成为离子所需要的能量，通常称为电离能。
-- 在原子核尺度上，结合能等于核子或原子核组成新原子核时释放的能量，同时也是**将原子核分解为自由的、未结合的核子需要的能量。原子核的结合能源于核子之间的核力。**
+- 在原子核尺度上，结合能等于核子或原子核组成新原子核时释放的能量，同时也是**将原子核分解为自由的、未结合的核子需要的能量，或者反之，是将自由中子、质子结合成原子核释放的能量，当认作是原子核中的束缚能的时候，表示为负能量。原子核的结合能源于核子之间的核力。**
+	- ![[比结合能.jpg]]
 - 在天体物理学上，天体的引力结合能是指将该天体的物质全部移动到无穷远处需要的能量。和引力势能不同，引力势能是指将两个在万有引力作用下的物体（比如地球和太阳）之间距离增加到无穷大（而物体保持完整）需要的能量。后者能量更小些。
 
 ### 应用
 - [[核聚变]]与[[核裂变]]是分别将重核和轻核向着平均结合能增大的方向转变的过程，因此都能放出巨大能量。
+	- 质量是被束缚住的能量。核反应其实比较复杂，为了方便理解，下面先以氢原子为例讨论。氢原子的构成比较简单，简单的说可以理解成：1个电子，1个质子；这两个粒子通过电磁相互作用被束缚在一起。注意一下这里的 束缚 两个字，束缚在物理上意味着有个坑（势能低），粒子想在坑外运动，他的运动的能量必须足够它跑出坑。束缚态的粒子的能量比自由的粒子的能量要低，对于氢原子来说，氢原子的总能量=电子质量+质子质量+束缚能量。这里的 **束缚能量 是一个负的能量**（-13.6 eV, eV是一个能量单位）。如果要想让氢原子里的电子和质子不再束缚在一起，必须至少给这个氢原子 注入 13.6eV 的能量。如果你去称量，你会发现 电子的质量+质子的质量 比氢原子质量重了 13.6eV。
+
 - 恒星中发生的核聚变反应能产生的最重的元素是铁，因为如果要聚变成更重的元素就需要吸收能量。
