--- a/hzhaoc-f(x)/Physics/Quantum Mechanics/核聚变.md
+++ b/hzhaoc-f(x)/Physics/Quantum Mechanics/核聚变.md
@@ -1,4 +1,4 @@
-核聚变，又称融合反应，是指将两个较轻的核结合而形成一个较重的核和一个极轻的核（或粒子）的一种核反应形式。在此过程中，物质并没有守恒，因为有一部分正在聚变的原子核的物质被转化为**光子（能量）**。**核聚变是给活跃的或“主序的”恒星提供能量的过程**。
+核聚变（台湾称为核融合），又称聚变反应，是指将**两个较轻的核结合而形成一个较重的核和一个极轻的核（或粒子）的一种核反应形式**。在此过程中，**物质没有守恒，因为有一部分正在聚变的原子核的物质被转化为光子（能量）**。**核聚变是给活跃的或“主序的”恒星提供能量的过程。**
 
 > 太阳是主序星，通过原子核的核聚变产生能量，把氢原子聚变成氦原子。在它的核心，太阳发生以每秒钟6.2亿吨氢的核聚变。
 
@@ -10,7 +10,7 @@
 
 举例：两个质量小的原子，比方说两个氘原子，在一定条件下（如超高温和高压），会发生原子核互相聚合作用，生成中子和氦-3，并伴随着巨大的能量释放。
 
-原子核中蕴藏巨大的能量。根据质能方程E=mc2，原子核之净质量变化（反应物与生成物之质量差）造成能量的释放。如果是由重的原子核变化为轻的原子核，称为核裂变，如原子弹爆炸；如果是由较轻的原子核变化为较重的原子核，称为核聚变。一般来说，这种核反应会终止于铁，因为其原子核最为稳定。
+原子核中蕴藏巨大的能量。根据质能方程E=mc2，原子核之净质量变化（反应物与生成物之质量差）造成能量的释放。如果是由重的原子核变化为轻的原子核，称为核裂变，如原子弹爆炸；如果是由较轻的原子核变化为较重的原子核，称为核聚变。**一般来说，这种核反应会终止于铁，因为其原子核最为稳定**。
 
 1920年，亚瑟·爱丁顿提出氢氦聚变可能是恒星能量的主要来源。在卢瑟福的核嬗变实验基础上，马克·奥利芬特于1932年完成了氢同位素的实验室聚变。1930年代，汉斯·贝特提出了恒星核聚变主循环的理论。1940年代初，作为曼哈顿计划的一部分，开始研究用于军事目的的核聚变。1951年，在核试验中完成了核聚变。1952年11月1日，在常春藤麦克氢弹试验中首次进行了大规模核聚变。
 
@@ -26,24 +26,16 @@
 
 由于电浆很快就会飞散开来，所以必须先将其封闭。用来使电浆封闭的方法有许多种，太阳内部是利用巨大重力使电浆封闭，而在地球上则必须采取别的方法，磁场的利用便是其中一种。当电浆带电时，电荷被卷在磁力线上，因此只要制造出磁场，就能够将电浆封闭，使它们悬浮在真空中。
 
+# 为什么核聚变与核裂变都释放能量？
+真正反应原子核稳定性的是平均结合能，也就是结合能与核子数的比值，原子核的平均结合能越高，原子核就越稳定，平均结合能越低，原子核就更容易发生聚变或者裂变，由于质量和能量是等效的，所以我们也可以用核子平均质量来描述。铁是原子核稳定性最高的。
+
+![[核子平均质量.jpeg|500]]
+或者
+![[avg binding energy to number of nucleons.jpg|550]]
+
+> 所谓**结合能**，就是孤立的核子（中子、质子）结合成一个原子核所放出的能量，也等于把一个原子核拆解成单个的核子所需要的能量。**比结合能**就是结合能除以原子核内的核子数。从这里大家就能发现，比结合能和化学领域中的键能的概念很相似。键能越大，说明这种化学键越牢固，要破坏化学键所需要的能量就越大。比结合能也有类似的特点，铁具有最大的比结合能，因此铁核是最稳定的。其他核若聚变形成铁核，是释放能量的反应，但要让铁核聚变将要吸收能量而不是释放能量了，因此说重核聚变到铁就结束了。
+
 # 优缺点
 相较于核裂变发电，核聚变产生的核废料半衰期极短（低管理成本、核泄漏时总危害较低、最多只有一公里内需要撤退）、安全性也更高（不维持对核的约束便会停止反应）。如氘和氚之核融合反应，其原料可直接取自海水，来源几乎取之不尽，因而是比较理想的能源取得方式。
 
 核融合也是一种中子源，借此可以触发核分裂。利用中子源来触发核分裂反应称为次临界核分裂，次临界核分裂不但安全性接近核融合，且技术难度较核融合发电低（若是把核融合来当中子源触发核分裂发电，技术需求也会比仅使用核融合的能量发电低），还可以处理核分裂发电造成的核废料及过多的原子弹、让这些核废料的半衰期由数万年缩短为数百年。
-
-# 研究历史及未来研究方向
-核融合程序于1932年由澳洲科学家马克·奥利芬特所发现。随后于1950年代早期，他在澳洲国立大学成立至今依旧活跃的电浆核融合研究机构（Australian Plasma Fusion Research Facility）。
-
-目前人类已经可以实现不受控制的核聚变，如氢弹的爆炸；也可以触发可控制核融合，只是输入的能量大于输出、或发生时间极短。但是要想能量可被人类有效利用，必须能够合理的控制核聚变的速度和规模，实现持续、平稳的能量输出；而触发核融合反应必须消耗能量（约1亿度），因此人工核融合所产生的能量与触发核融合的能量要到达一定的比例才能有经济效应。科学家正努力研究如何控制核聚变，但是现在看来还有很长的路要走。目前主要的几种可控制核聚变方式：
-- Z脉冲功率设施
-- 激光约束（惯性约束）核聚变
-- 磁约束核聚变（托卡马克）
-	- **磁局限融合**（英语：Magnetic confinement fusion），利用磁场与高热电浆来引发核融合反应的技术。聚变反应合并轻的原子核，例如氢，以形成更重的原子核，如氦。磁局限融合的作法是，先加热燃料，使它成为电浆（Plasma）形态，再利用磁场，拘束住高热电浆中的带电粒子，使它进行螺线运动，进一步加热电浆，直到产生核融合反应。
-	- **等离子体**（又称电浆），是物质状态之一，是在高温之下出现的高度离化气体。其物理性质与固态、液态和气态不同。等离子体和气体一样，形状和体积不固定，会依着容器而改变。等离子体有接近完美的导电率，也会在磁场的作用下，显现出各种三维结构，例如丝状物、圆柱状物和双层等。等离子体则有2至3种不同性质的粒子，例如电子、离子、质子和中子，这些不同性质的粒子可以以其电荷的正负和大小来区别，并会有不同的速度和温度。这能产生一些特殊的波和不稳定性。
-
-- 2019年11月，美国洛斯阿拉莫斯国家实验室正在进行一项等离子体线性实验（PLX），旨在结合目前两种核聚变方式之所长。
-- 2005年，部份科学家相信已经成功做出小型的核聚变，并且得到初步验证。首个实验核聚变发电站将选址法国。
-- 根据2014年2月12日英国科学期刊《自然》电子版，美国能源部所属国家研究机构劳伦斯利福摩尔国家实验室（英语：Lawrence Livermore National Laboratory）的研究团队首次确认，使用高功率雷射进行的核融合实验，从燃料所释放出来的能量，超出投入的能量。
-- 2014年10月，洛克希德·马丁宣布发明小型核融合反应炉，100兆瓦特反应炉缩小至7x10英呎大小，于1年之内能进行测试，10年内能正式运转。大部分科学家对此声明表示怀疑，其小型反应炉与世上任何反应炉构造都不同。
-- 目前正在建设世界上最大的实验性托卡马克反应炉为法国南部的国际热核融合实验反应炉，专家估计它将在2025年12月进行第一阶段测试，若实验成功，将协助第一批核融合发电厂在 2040年前投入运行，营运成本和核分裂反应炉相当。
-- 2021年5月，中国科学院合肥物质科学研究院有“人造太阳”之称的全超导托卡马克核聚变实验装置（EAST），成功实现可重复的1.2亿摄氏度101秒和1.6亿摄氏度20秒等离子体运行
