--- a/hzhaoc-f(x)/Physics/能源、 材料、未来/碳纳米管.md
+++ b/hzhaoc-f(x)/Physics/能源、 材料、未来/碳纳米管.md
@@ -24,6 +24,10 @@
 
 # 应用前景
 ### 关于碳纳米管成为集成电路核心材料的潜力
-在2019年，美國麻省理工學院的研究人員採用碳奈米管電晶體（Carbon Nanotube Transistors）成功研製出首款基於RISC-V指令集的16位元微處理器，名為「RV16X-NANO」。「RV16X-NANO」在16位元資料和定址上執行標準32位元長指令[15][16]，包含了14,000多個電晶體，是迄今為止由新興奈米技術製造的最先進晶片。它能夠執行一條「Hello，World！」程式，列印出：“你好，世界！我是 RV16XNano，以奈米碳管所組成”
-https://www.zhihu.com/question/344039567
-https://www.zhihu.com/question/21713617
+在2019年，美國麻省理工學院的研究人員採用碳奈米管電晶體（Carbon Nanotube Transistors）成功研製出首款基於RISC-V指令集的16位元微處理器，名為「RV16X-NANO」。「RV16X-NANO」在16位元資料和定址上執行標準32位元長指令，包含了14,000多個電晶體，是迄今為止由新興奈米技術製造的最先進晶片。它能夠執行一條「Hello，World！」程式，列印出：“你好，世界！我是 RV16XNano，以奈米碳管所組成”
+### 太空电梯缆绳
+# 制作
+- arc-discharge
+- **chemical vapor deposition**
+- laser ablation
+- electrolysis
